--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
           
-          <i class="bi bi-minecart ms-3 cart"></i>
+          <i (click)="addOrder()" class="bi bi-minecart ms-3 cart"></i>
         </form>
       </div>
     </div>
